p2/confs/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: apps-ingress
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
    # Route for app1.com -> app1-service (Pod iternal service url)
    - host: app1.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app1-service
                port:
                  number: 80
    # Route for app2.com -> app2-service
    - host: app2.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app2-service
                port:
                  number: 80
    # Default route (no host specified) -> app3-service
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app3-service
                port:
                  number: 80
